--- a/societas/r/confirmation/0/index.html
+++ b/societas/r/confirmation/0/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&#257;s. Exit. &ndash;&nbsp;Sortie.</title>
+  <title>Animat Habitat societ&amacr;s. Exit. &ndash;&nbsp;Sortie.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -25,7 +25,7 @@
   <nav>
     <ul class="page single">
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li>
+      <li class="crumb dark"><a href="../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
       <li class="crumb scene dark"><a><em>Exit<font class="desktop"> &ndash; Sortie</font></em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -37,7 +37,7 @@
       <div>
         <h3 class="letterhead">Thanks for journeying this far.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avoir voyag&eacute; aussi loin.</font></h3>
 
-        <p class="linebreak"><a href="../../" title="Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
+        <p class="linebreak"><a href="../../" title="Animat Habitat societ&amacr;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
 
       </div>
 
