--- a/societas/r/confirmation/index.html
+++ b/societas/r/confirmation/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&#257;s. Confirm. &ndash;&nbsp;Confirmer.</title>
+  <title>Animat Habitat societ&amacr;s. Confirm. &ndash;&nbsp;Confirmer.</title>
 
   <style>
     html { background-color: #333; }
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../../" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li>
+      <li class="crumb dark"><a href="../../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
       <li class="crumb scene dark"><a><em>Confirmation</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
