--- a/support/index.html
+++ b/support/index.html
@@ -73,7 +73,7 @@
         <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
 
         <h5 class="letterhead title">Society<font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;</font></h5>
-        <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&#257;s.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
+        <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&amacr;s.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
         <p>Animat Habitat <a href="../societas/concilium/" title="Animat Habitat concilium.">Concilium</a></p>
         <p>Animat Habitat <a href="../societas/princeps/" title="Animat Habitat princeps.">Princeps</a></p>
 
