--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4>Animat<font class="thin">&mdash;<em>verb</em> in 3sg., indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to give life to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<em>verbe</em> en 3&nbsp;sg., pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font></h4>
+        <h4>Animat<font class="thin">&mdash;<em>verb</em> in 3sg., indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<em>verbe</em> en 3&nbsp;sg., pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font></h4>
 
         <!-- anim&otilde; -->
 
