--- a/patron/index.html
+++ b/patron/index.html
@@ -55,7 +55,7 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donate <font class="small">CA$<sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$<sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <em>with no strings attached</em>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." rel="noopener"><button>Donate <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">Support independent art at Animat Habitat as a Patron Member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
           <ul class="square">
