--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -218,23 +218,26 @@
     <article>
       <div class="project-broadcast quote">
 
-        <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
-        <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <pre class="thin"></pre> -->
+
+        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="elephant-conservation-angola/"><font class="scene-one">Elephant Conservation in Angola</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-namibia/"><font class="scene-one">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="elephant-conservation-namibia/"><font class="scene-one">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
@@ -266,8 +269,8 @@
         <h3><a href="history-of-elephants/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="book-of-ella-4/"><font class="scene-one">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
@@ -275,8 +278,8 @@
         <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="history-of-elephants-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
