--- a/support/index.html
+++ b/support/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <meta name="google" content="notranslate" />
 
   <meta name="company" content="Animat Habitat" />
@@ -42,7 +42,6 @@
       <div>
         <p><a href="../" title="Animat Habitat">Animat Habitat</a></p>
         <p>Animat Habitat <a href="../canon/" title="Animat Habitat canon.">Canon</a></p>
-        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
 
         <h5 class="linebreak scene-one title">I&nbsp; White Elephant</h5>
         <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
@@ -54,7 +53,7 @@
 
         <!-- <h5 class="linebreak scene-three title">III&nbsp; White Bear</h5>
         <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
-        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-northern-atlantic-right-whale/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. A History of Whales, Northern Atlantic Right Whale.">History of Whales</a> &hellip;</p> -->
+        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-north-atlantic-right-whale/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. A History of Whales, Northern Atlantic Right Whale.">A History of Whales</a> &hellip;</p> -->
 
         <h5 class="letterhead title">Boutique</h5>
         <p>Animat Habitat <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a></p>
@@ -73,6 +72,7 @@
         <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
 
         <h5 class="letterhead title">Society<font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;</font></h5>
+        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
         <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
         <p>Animat Habitat Societ&amacr;s &ndash; <a href="../societas/concilium/" title="Animat Habitat concilium.">Concilium</a></p>
         <p>Animat Habitat Societ&amacr;s &ndash; <a href="../societas/princeps/" title="Animat Habitat princeps.">Princeps</a></p>
