--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -264,14 +264,14 @@
         <!-- <h3><a href="the-beginning-of-printing/"><font class="scene-two">The Beginning of Printing</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="history-of-the-forest-and-the-trees/"><font class="scene-two">History of the Forest and the Trees</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="the-second-chapter/"><font class="scene-two">The Second Chapter</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
